--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/html-webpack-plugin": "^3.2.9",
     "@types/react-dom": "^18.3.0",
     "@types/webpack-bundle-analyzer": "^4.7.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
